welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:16: error: not found: value pos
  if (y==getMondeHauteur()-1) pos(x+1,0)
                              ^ColumnByColumn:17: error: not found: value pos
  else pos(x,y+1)
       ^